simplified hooks and updated eslint.rc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
     "**/*.test.ts",
     "**/*.test.tsx"
   ],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/app.js"]
 }
